
////
.Changed

.Deprecated
////

.Removed
- {url-issues}89[#89] removed spek as testing/specification library

////
.Fixed

.Security

////

[[v0.4.0]]
== [0.4.0] -- 2022-10-09

{url-cl}0.3.3$$...$$0.4.0[Full Changelog]

.Changed
- Bumped gradle-wrapper, kotlin, coroutines, git-publish, detekt, junit-jupiter, spek, mockk,
  assertj, reckon, checkout, cache, setup-java

.Removed
- removed kordamp gradle plugins


[[v0.3.3]]
== [0.3.3] -- 2021-12-22

{url-cl}0.3.2$$...$$0.3.3[Full Changelog]

.Changed
- Bumped gradle-wrapper, kotlin, coroutines, mockk, rxjava, junit, kordamp-gradle-plugins, kluent, assertj


[[v0.3.2]]
== [0.3.2] -- 2021-03-28

{url-cl}0.3.1$$...$$0.3.2[Full Changelog]

.Changed
- Bumped gradle-wrapper, kotlin, coroutines, mockk, rxjava, junit, kordamp-gradle-plugins


[[v0.3.1]]
== [0.3.1] -- 2021-02-04

{url-cl}0.3.0$$...$$0.3.1[Full Changelog]

.Changed
- Bumped kotlin, gradle-wrapper, kotlin, kluent, spek, assertj, kordamp-gradle-plugins, couroutines, mockk
  spek


[[v0.3.0]]
== [0.3.0] -- 2020-11-07

{url-cl}0.2.6$$...$$0.3.0[Full Changelog]

.Added
- {url-issues}55[#45] Activated explicit api mode

.Changed
- Bumped gradle, rxjava2, kluent, assertj, coroutines, kordamp-gradle-plugins


[[v0.2.6]]
== [0.2.6] -- 2020-10-04

{url-cl}0.2.5$$...$$0.2.6[Full Changelog]

.Added
- Improved some kotlinDoc (RisTag)

.Changed
- Bumped gradle, kotlin, kordamp-gradle-plugins, gradle-wrapper, coroutines, junit, spekframework, assertj, mockk
- {url-issues}45[#45] Compile to Java 11

.Fixed
- Github action for publication


[[v0.2.5]]
== [0.2.5] -- 2020-06-07

{url-cl}0.2.3$$...$$0.2.5[Full Changelog]

.Added

.Changed
- {url-issues}35[#35] Bumped kordamp-gradle-plugins, mockk, kluent
- {url-issues}36[#36] Bumped kordamp-gradle-plugins, assertj, coroutines
- {url-issues}37[#37] Use kordamp plugin and project DSL
- {url-issues}38[#38] Bump gradle-wrapper
- {url-issues}39[#39] Bump coroutines
- {url-issues}40[#40] Bump github action cache