@@ -73,6 +73,7 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog].
 .Changed
 - Bumped gradle-wrapper, kotlin, coroutines, git-publish, detekt, junit-jupiter, spek, mockk,
   assertj, reckon, checkout, cache, setup-java
+- Publish to maven-central
 
 .Removed
 - removed kordamp gradle plugins
